--- a/ProyectoTLS/nbproject/project.properties
+++ b/ProyectoTLS/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectotls.ProyectoTLS
+main.class=inf.pucp.edu.pe.vista.principal.InicioSesion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
